# Snake

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
game/: Cargo.toml
game/assets/levels/: test.level.ron
game/src/: app.rs  error.rs  game.rs  gui.rs  main.rs
game/src/game/: color.rs  level.rs
