[package]
name = "rust_snake"
version = "0.1.0"
authors = ["BB20101997 <bb-github@t-online.de>"]
license = "MIT"
edition = "2018"

[dependencies]
pistoncore-glutin_window = "0.67.2"
piston2d-opengl_graphics = "0.74.0"
conrod_core = "0.75.0"
conrod_piston = "0.73.0"
piston_window = "0.114.0"
find_folder = "0.3.0"
rand = "0.8.3"